fixed sidebar spacing

--- a/style.scss
+++ b/style.scss
@@ -573,6 +573,7 @@ header nav {
 	}
 
 	.side-nav {
+		margin: 0 0 1.5rem 1.5rem;
 		width: 30%;
 		float: right;
 		clear:  right;
